# Wayfarer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: dialogues.json  items.json  npcs.json  quests.json
assets/rooms/: 001_town_square.json  002_north_gate.json  003_market_street.json  004_old_road.json
docs/: commands.md  content_creation.md
src/: character.rs  color.rs  command.rs  components.rs  currency.rs  dialogue.rs  direction.rs  game_loop.rs  game_state.rs  help.rs  item.rs  lib.rs  main.rs  npc.rs  quest.rs
src/db/: account.rs  character.rs  item.rs  mod.rs  npc.rs  quest.rs  room.rs  schema.rs
src/network/: auth.rs  mock.rs  mod.rs  parser.rs  session.rs  telnet.rs  websocket.rs  ws_session.rs
src/systems/: combat.rs  input.rs  mod.rs  movement.rs  npc_routine.rs  output.rs  queries.rs  quest.rs
src/systems/input/: combat.rs  items.rs  mod.rs  movement.rs  npcs.rs  world.rs
src/systems/input/admin/: items.rs  mod.rs  npcs.rs  quests.rs  rooms.rs
src/world/: loader.rs  mod.rs  player_registry.rs  room.rs  seed.rs
tests/: integration_tests.rs
