[package]
name = "wayfarer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wayfarer"
path = "src/main.rs"

[lib]
name = "wayfarer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hecs = "0.10"
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
bcrypt = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
